--- a/Thunderstore/manifest.json
+++ b/Thunderstore/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "REPOPresence",
+    "name": "REPODiscordRichPresence",
     "version_number": "0.1.0",
     "website_url": "https://github.com/Toliann",
     "description": "R.E.P.O. Discord Rich Presence support",
